replace deprecated method with httpClient