@@ -2,10 +2,11 @@ package greeter;
 
 import org.junit.jupiter.api.Test;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -15,7 +16,14 @@ public class GreetingServerE2ETest {
     @Test
     public void shouldGreetWithHelloWorld() throws IOException, InterruptedException {
         GreetingServer.main();
-        String response = new BufferedReader(new InputStreamReader(new URL("http://localhost:8080/greeting").openStream())).readLine();
-        assertThat(response, is("Hello, World!"));
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("http://localhost:8080/greeting"))
+                .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        String responseBody = response.body();
+
+        assertThat(responseBody, is("Hello, World!"));
     }
 }
